<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_new"
        android:title="@string/menu_add"
        android:icon="@drawable/newnote"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_whiteboard"
        android:title="@string/menu_whiteboard"
        android:icon="@drawable/scketching"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_restore"
        android:title="@string/menu_restore"
        android:icon="@drawable/ic_history_black_48dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_backup"
        android:title="@string/menu_backup"
        android:icon="@drawable/ic_backup_black_48dp"
        app:showAsAction="always" />

</menu>
